GNOME Bugzilla – Bug 783641
tz.c: compiler warning: implicit declaration of function ‘islower’
Last modified: 2017-06-12 15:03:56 UTC
Building gnome-settings-daemon on Solaris, from released tarball or git master warns: tz.c: In function ‘tz_load_db’: tz.c:96:48: warning: implicit declaration of function ‘islower’ [-Wimplicit-function-declaration] if (tmpstrarr[3] && *tmpstrarr[3] != '-' && !islower(loc->zone)) { ^ Adding an include of the standard <ctype.h> header fixes it.
Created attachment 353545 [details] [review] Patch to add #include <ctype.h> to plugins/datetime/tz.c
Review of attachment 353545 [details] [review]: looks fine, thanks
To ssh://git.gnome.org/git/gnome-initial-setup 7b83212..8105660 master -> master
To ssh://git.gnome.org/git/gnome-settings-daemon 884ebb4..f352e64 gnome-3-24 -> gnome-3-24 f3367d6..de63819 master -> master
To ssh://git.gnome.org/git/gnome-control-center bab859a..f090d7e master -> master