tz.c: compiler warning: implicit declaration of function ‘islower’

https://bugzilla.gnome.org/show_bug.cgi?id=783641

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>